# traffic-agent-assistant

./: .codexignore  .env.local.example  .gh_bp.json  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  WORKFLOW.md  index.html  latex_errors.md  main.tex  project_contract.json  pyproject.toml
chapters/: appendix_api.tex  appendix_schema.tex  appendix_testcases.tex  ch00_abbreviations.tex  ch00_tom_tat.tex  ch01_gioi_thieu.tex  ch02_co_so_ly_thuyet.tex  ch03_kien_truc.tex  ch04_data_pipeline.tex  ch05_ml_simulation.tex  ch06_rag.tex  ch07_agent.tex  ch08_implementation.tex  ch09_evaluation.tex  ch10_rui_ro.tex  ch11_ket_luan.tex
css/: slides.css
docs/: 00_STWI_Summary_and_Guidelines.md  01_System_Architecture_Data_Pipeline.md  02_ML_and_Simulation_Specification.md  03_Knowledge_Base_and_RAG_Design.md  04_AI_Agent_Orchestrator_CF_VLA.md  05_Implementation_Plan.md  ProgressAssessment_2026_07_15.md  README.md  gemini-code-1781508694335.md
js/: presentation-tools.js  presentation.js
scripts/: benchmark_external_vision_model.py  convert_docs.py  validate_docs.py
sections/: 00_00_cover.html  00_01_toc.html  01_00_chapter.html  01_01_gioi_thieu.html  01_02_muc_tieu.html  02_00_chapter.html  02_01_stgcn_lstm.html  02_02_rag_sql.html  02_03_cfvla_theory.html  02_03_counterfactual_safety.html  03_00_chapter.html  03_01_kien_truc_4tang.html  03_02_e2e_flow.html  04_00_chapter.html  04_01_cctv_pipeline.html  04_02_tensor.html  05_00_chapter.html  05_01_stgcn_model.html  05_02_ade_surrogate.html  06_00_chapter.html  06_01_vectordb.html  07_00_chapter.html  (+10 more)
(+279 files in other folders)
