[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stwi"
version = "0.1.0"
description = "SmartTraffic What-If — decision-support MVP"
requires-python = ">=3.11"
license = {text = "Proprietary"}
dependencies = [
  "numpy>=1.26,<3",
  "pydantic>=2.0",
]

[project.optional-dependencies]
vision = [
  "ultralytics==8.4.75",
  "polars-lts-cpu==1.33.1",
  "pi-heif==1.4.0",
  "inference-sdk>=0.59,<1",
]
forecast = ["torch>=2.2,<3"]
simulation = ["eclipse-sumo==1.27.0"]
knowledge = [
  "pypdf>=4.0",
  "duckdb>=0.10",
  "qdrant-client>=1.9",
  "fastembed>=0.3",
  "psycopg[binary]>=3.1",
]
orchestrator = [
  "fastapi>=0.110,<1",
  "uvicorn>=0.29,<1",
  "httpx>=0.27,<1",
  "celery>=5.3,<6",
  "redis>=5,<6",
  "langgraph>=0.2,<1",
  "sse-starlette>=2,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
